Fixed minor error on gin swagger documentation and moved request templates to request.go
